--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Tiiiiiiitre</h1>
+    <canvas id="canvas" width="200" height="200"></canvas>
+    <script src = "js/game.js"></script>
 </body>
 </html>
