déplacement bas + droite done

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Tiiiiiiitre</h1>
-    <canvas id="canvas" width="200" height="200"></canvas>
+    <canvas id="canvasTest" width="300" height="300"></canvas>
     <script src = "js/game.js"></script>
 </body>
 </html>
